--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -6,6 +6,8 @@
     <title>Sobre Nós</title>
     <link rel="stylesheet" href="../../assets/css/sobre.css">
     <link rel="stylesheet" href="../../assets/css/padronizacao.css">
+    <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
