--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -6,6 +6,8 @@
     <title>Contato</title>
     <link rel="stylesheet" href="../../assets/css/contato.css">
     <script src="../js/contato.js"></script>
+    <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
