--- a/src/html/prevencoes.html
+++ b/src/html/prevencoes.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prevenções</title>
     <link rel="stylesheet" href="../../assets/css/prevencoes.css">
+    <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
