--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/css/paginainicial.css">          
     <title>Página Inicial</title> 
+    <script src="../../assets/index.js" defer></script>  
     <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
