feat: UPDATE validação de formulario corrigida

--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -48,26 +48,26 @@
         </section>
         <section id="cards">
             <span class="pedaco">Enchente</span>
-                <div class="element-principal">
-                    <h3>Gravidade</h3>
-                    <h3>Cidade</h3>
+            <div class="element-principal">
+                <h3>Gravidade</h3>
+                <h3>Cidade</h3>
+            </div>
+            <div class="element-secundario">
+                <div class="gravidades">
+                    <p class="gravidade-alta">Alta</p>
+                    <p class="gravidade-baixa">Baixa</p>
+                    <p class="gravidade-media">Média</p>
                 </div>
-                <div class="element-secundario">
-                    <div class="gravidades">
-                        <p class="gravidade-alta">Alta</p>
-                        <p class="gravidade-baixa">Baixa</p>
-                        <p class="gravidade-media">Média</p>
-                    </div>
-                    <div class="cidade">
-                        <p>Taquari</p>
-                        <p>Lajeado</p>
-                        <p>Butía</p>
-                    </div>
+                <div class="cidade">
+                    <p>Taquari</p>
+                    <p>Lajeado</p>
+                    <p>Butía</p>
                 </div>
-            <button class="expandir-btn" id="modalBtn">...</button>
-            <div class="modal" id="modal">
+            </div>
+            <button class="expandir-btn" id="modalBtn1">...</button>
+            <div class="modal" id="modal1">
                 <div class="modal-content">
-                    <span class="close-btn" id="closeBtn">&times;</span>
+                    <span class="close-btn" id="closeBtn1">&times;</span>
                     <div class="element-principal">
                         <h3>Gravidade</h3>
                         <h3>Cidade</h3>
@@ -79,31 +79,52 @@
                             <p class="gravidade-media">Média</p>
                         </div>
                         <div class="cidade">
-                            <p>Taquari</p>
-                            <p>Lajeado</p>
-                            <p>Butía</p>
+                            <p>Guaíba</p>
+                            <p>Barão do Triunfo</p>
+                            <p>Baur</p>
                         </div>
                     </div>
                 </div>
             </div>
             <span class="pedaco">Deslizamento</span>
-                <div class="element-principal">
-                    <h3>Gravidade</h3>
-                    <h3>Cidade</h3>
+            <div class="element-principal">
+                <h3>Gravidade</h3>
+                <h3>Cidade</h3>
+            </div>
+            <div class="element-secundario">
+                <div class="gravidades">
+                    <p class="gravidade-alta">Alta</p>
+                    <p class="gravidade-baixa">Baixa</p>
+                    <p class="gravidade-media">Média</p>
                 </div>
-                <div class="element-secundario">
-                    <div class="gravidades">
-                        <p class="gravidade-alta">Alta</p>
-                        <p class="gravidade-baixa">Baixa</p>
-                        <p class="gravidade-media">Média</p>
+                <div class="cidade">
+                    <p>Teutônia</p>
+                    <p>Pantano Grande</p>
+                    <p>Rio Pardo</p>
+                </div>
+            </div>
+            <button class="expandir-btn" id="modalBtn2">...</button>
+            <div class="modal" id="modal2">
+                <div class="modal-content">
+                    <span class="close-btn" id="closeBtn2">&times;</span>
+                    <div class="element-principal">
+                        <h3>Gravidade</h3>
+                        <h3>Cidade</h3>
                     </div>
-                    <div class="cidade">
-                        <p>Teutônia</p>
-                        <p>Pantano Grande</p>
-                        <p>Rio Pardo</p>
+                    <div class="element-secundario">
+                        <div class="gravidades">
+                            <p class="gravidade-alta">Alta</p>
+                            <p class="gravidade-baixa">Baixa</p>
+                            <p class="gravidade-media">Média</p>
+                        </div>
+                        <div class="cidade">
+                            <p>São Carlos</p>
+                            <p>Arrojo dos ratos</p>
+                            <p>Estrela-d'Alva</p>
+                        </div>
                     </div>
                 </div>
-            <button class="expandir-btn">...</button>
+            </div>
         </section>
     </main>
     <footer>
