--- a/src/html/prevencoes.html
+++ b/src/html/prevencoes.html
@@ -12,10 +12,10 @@
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
-                <img src="/assets/logo.png" alt="logo">
+                <img src="../../assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <img src="../..//assets/img/lupa.png" alt="lupa De Pesquisa">
                 <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
             </section>
         </div>
@@ -35,7 +35,7 @@
         <div class="carrossel">
         <section class="carrossel-item prevencao-tipos">
             <h1>Dicas de Prevenção</h1>
-                <img src="/assets/prev.jpg" alt="prev">
+                <img src="../../assets/img/prev.jpg" alt="prev" id="imagem-prevencao">
             <h3>Quais medidas poderiam ter sido tomadas para evitar tragédia no RS?</h3>
             <a href="https://www.otempo.com.br/brasil/2024/5/7/quais-medidas-poderiam-ser-tomadas-para-evitar-tragedia-no-rs-">
                 <button>Ler mais</button>
@@ -80,29 +80,29 @@
             <section id="footerfeio">
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                        <img src="../../assets/img/redeSocial.png" alt="Redes Sociais">
                         <h3>Redes Sociais</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="./sobre.html">
-                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                        <img src="../../assets/img/sobreNos.png" alt="Sobre Nós">
                         <h3>Sobre Nós</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/contato.png" alt="Contato">
+                        <img src="../../assets/img/contato.png" alt="Contato">
                         <h3>Contato</h3>
                     </a>
                 </div>
             </section>
             <div class="middle-section">
-                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <img src="../../assets/img/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
                 <p>Copyright ©2024 Portal Do Clima RS</p>
             </div>
             <div class="qrcode-section">
-                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+                <img src="../../assets/img/qrCode.png" alt="QR Code" id="qrcode">
             </div>
         </div>
         <div class="diagonal-line left"></div>
