--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -25,8 +25,9 @@
                 <img src="/assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/img/lupa.png" alt="lupa De Pesquisa">
-                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+                <img src="../../assets/img/eraser.png" alt="borracha" id="clear-icon">
+                <img src="/assets/img/lupa.png" alt="Lupa de Pesquisa" id="search-icon">
+                <input type="text" placeholder="Pesquisar" id="search-bar" alt="Barra de Pesquisa">
             </section>
         </div>
         <div class="navbar-container">
@@ -41,7 +42,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main id="conteudo">
         <span id="span-principal">Mapa de Alertas</span>
         <section id="mapa">
             <div id="map"></div>
