--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -17,8 +17,9 @@
                 <img src="/assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/img/lupa.png" alt="lupa De Pesquisa">
-                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+                <img src="../../assets/img/eraser.png" alt="borracha" id="clear-icon">
+                <img src="/assets/img/lupa.png" alt="Lupa de Pesquisa" id="search-icon">
+                <input type="text" placeholder="Pesquisar" id="search-bar" alt="Barra de Pesquisa">
             </section>
         </div>
         <div class="navbar-container">
@@ -33,7 +34,7 @@
             </nav>
         </div>
     </header> 
-    <main>
+    <main id="conteudo">
         <div id="side-text">
             <h1>Contate-nos</h1>
             <p id="mensagem-forms">Entre em contato conosco preenchendo o formulário abaixo. Estamos aqui para responder suas dúvidas, receber sugestões ou oferecer suporte.</p>
