--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,8 +17,9 @@
                 <img src="/assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/img/lupa.png" alt="lupa De Pesquisa">
-                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+                <img src="../../assets/img/eraser.png" alt="borracha" id="clear-icon">
+                <img src="/assets/img/lupa.png" alt="Lupa de Pesquisa" id="search-icon">
+                <input type="text" placeholder="Pesquisar" id="search-bar" alt="Barra de Pesquisa">
             </section>
         </div>
         <div class="navbar-container">
@@ -33,10 +34,10 @@
             </nav>
         </div>
     </header>     
-    <main>
+    <main id="conteudo">
         <section id="parte-1">
             <p class="portal-clima">
-                Portal Clima<span class="hightlight">RS</span>
+                Portal Clima<span class="marcacao">RS</span>
             </p>
         </section>
         <section id="parte-2">
