--- a/src/html/noticias.html
+++ b/src/html/noticias.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../assets/css/noticias.css">
     <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <script src="../js/noticias.js"></script>
 </head>
 <body>
     <header>
@@ -16,8 +17,9 @@
                 <img src="/assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/img/lupa.png" alt="lupa De Pesquisa">
-                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+                <img src="../../assets/img/eraser.png" alt="borracha" id="clear-icon">
+                <img src="/assets/img/lupa.png" alt="Lupa de Pesquisa" id="search-icon">
+                <input type="text" placeholder="Pesquisar" id="search-bar" alt="Barra de Pesquisa">
             </section>
         </div>
         <div class="navbar-container">
@@ -39,7 +41,7 @@
         <p>Outra característica importante do clima do estado são os ventos regionais, o Minuano mais famoso deles, a história conta que tem a origem de seu nome na tribo indígena Minuanos, que emitiam um som que lembrava o vento quando assobiava nas frestas das casas e nas árvores. Esse vento tem origem no Deserto da Patagônia argentina, ele é frio e tem origem polar, atinge o Rio Grande do Sul e a região sul de Santa Catarina e de modo geral ocorre após a passagem de frentes frias.</p>
         <p>Além do clima da região, fenômenos climátiicos como o aquecimento das águas do Oceano Pacífico como o El Niño foram um dos principais contribuintes para o grande volume de chuvas, essas chuvas foram responsáveis pelo o aumento das águas dos rios gerando as enchentes.</p>     
     </article>
-        <main>
+        <main id="conteudo">
             <section id="lastNews"> 
                 <h3>Últimas Notícias Rio Grande do Sul</h3>
                 <div class="noticias">
