--- a/src/html/prevencoes.html
+++ b/src/html/prevencoes.html
@@ -6,6 +6,8 @@
     <title>Prevenções</title>
     <link rel="stylesheet" href="../../assets/css/prevencoes.css">
     <script src="/src/js/prevencoes.js" defer></script>
+    <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -15,8 +17,9 @@
                 <img src="../../assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="../..//assets/img/lupa.png" alt="lupa De Pesquisa">
-                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+                <img src="../../assets/img/eraser.png" alt="borracha" id="clear-icon">
+                <img src="/assets/img/lupa.png" alt="Lupa de Pesquisa" id="search-icon">
+                <input type="text" placeholder="Pesquisar" id="search-bar" alt="Barra de Pesquisa">
             </section>
         </div>
         <div class="navbar-container">
@@ -31,17 +34,17 @@
             </nav>
         </div>
     </header>
-    <main class="container">
+    <main class="container" class="conteudo">
         <div class="carrossel">
         <section class="carrossel-item prevencao-tipos">
             <h1>Dicas de Prevenção</h1>
-                <img src="../../assets/img/prev.jpg" alt="prev" id="imagem-prevencao">
+                <img src="../../assets/img/prev.jpg" alt="prev" id="imagem-prevencao" class="conteudo">
             <h3>Quais medidas poderiam ter sido tomadas para evitar tragédia no RS?</h3>
             <a href="https://www.otempo.com.br/brasil/2024/5/7/quais-medidas-poderiam-ser-tomadas-para-evitar-tragedia-no-rs-">
                 <button>Ler mais</button>
             </a>    
         </section>
-        <section class="carrossel-item recomendacoes-seguranca">
+        <section class="carrossel-item recomendacoes-seguranca" class="conteudo">
             <h2>Recomendações de segurança</h2>
             <p ><b>Saiba o que fazer em caso de chuva e alagamentos</b></p>
             <p>Em situações de chuvas intensas e risco de alagamento, é fundamental que moradores de zonas suscetíveis a cheias adotem medidas preventivas
