modo noturno na página contato

--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -43,7 +43,7 @@
             </nav>
         </div>
     </header>
-    <main id="conteudo">
+    <main>
         <span id="span-principal">Mapa de Alertas</span>
         <section id="mapa">
             <div id="map"></div>
