--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -8,19 +8,20 @@
     <script src="../js/contato.js"></script>
     <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../assets/css/contatonoturno.css">
 </head>
 <body>
     <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
-                <img src="/assets/img/logo.png" alt="logo">
+                <img src="/assets/img/logo2.png" alt="logo" id="logo-trocar">
             </a>
-            <section id="barra-de-pesquisa">
-                <img src="../../assets/img/eraser.png" alt="borracha" id="clear-icon">
-                <img src="/assets/img/lupa.png" alt="Lupa de Pesquisa" id="search-icon">
-                <input type="text" placeholder="Pesquisar" id="search-bar" alt="Barra de Pesquisa">
-            </section>
+            <section id="modo-noturno">
+                <button id="dark-mode-toggle">
+                    <img src="../../assets/img/moon.png" alt="Ativar Modo Noturno" id="mode-icon">
+                </button>
+            </section>            
         </div>
         <div class="navbar-container">
             <nav class="navbar">
@@ -33,8 +34,8 @@
                 </ul>
             </nav>
         </div>
-    </header> 
-    <main id="conteudo">
+    </header>
+    <main>
         <div id="side-text">
             <h1>Contate-nos</h1>
             <p id="mensagem-forms">Entre em contato conosco preenchendo o formulário abaixo. Estamos aqui para responder suas dúvidas, receber sugestões ou oferecer suporte.</p>
@@ -67,19 +68,19 @@
             <section id="footerfeio">
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/img/redeSocial.png" alt="Redes Sociais">
+                        <img src="/assets/img/redeSocial.png" alt="Redes Sociais" id="social-icon">
                         <h3>Redes Sociais</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="./sobre.html">
-                        <img src="/assets/img/sobreNos.png" alt="Sobre Nós">
+                        <img src="/assets/img/sobreNos.png" alt="Sobre Nós" id="about-icon">
                         <h3>Sobre Nós</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/img/contato.png" alt="Contato">
+                        <img src="/assets/img/contato.png" alt="Contato" id="contact-icon">
                         <h3>Contato</h3>
                     </a>
                 </div>
