--- a/src/html/prevencoes.html
+++ b/src/html/prevencoes.html
@@ -8,19 +8,20 @@
     <script src="/src/js/prevencoes.js" defer></script>
     <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../assets/css/prevencoesmodonoturno.css">
 </head>
 <body>
     <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
-                <img src="../../assets/img/logo.png" alt="logo">
+                <img src="/assets/img/logo2.png" alt="logo" id="logo-trocar">
             </a>
-            <section id="barra-de-pesquisa">
-                <img src="../../assets/img/eraser.png" alt="borracha" id="clear-icon">
-                <img src="/assets/img/lupa.png" alt="Lupa de Pesquisa" id="search-icon">
-                <input type="text" placeholder="Pesquisar" id="search-bar" alt="Barra de Pesquisa">
-            </section>
+            <section id="modo-noturno">
+                <button id="dark-mode-toggle">
+                    <img src="../../assets/img/moon.png" alt="Ativar Modo Noturno" id="mode-icon">
+                </button>
+            </section>            
         </div>
         <div class="navbar-container">
             <nav class="navbar">
@@ -36,45 +37,45 @@
     </header>
     <main class="container" class="conteudo">
         <div class="carrossel">
-        <section class="carrossel-item prevencao-tipos">
-            <h1>Dicas de Prevenção</h1>
-                <img src="../../assets/img/prev.jpg" alt="prev" id="imagem-prevencao" class="conteudo">
-            <h3>Quais medidas poderiam ter sido tomadas para evitar tragédia no RS?</h3>
-            <a href="https://www.otempo.com.br/brasil/2024/5/7/quais-medidas-poderiam-ser-tomadas-para-evitar-tragedia-no-rs-">
-                <button>Ler mais</button>
-            </a>    
-        </section>
-        <section class="carrossel-item recomendacoes-seguranca" class="conteudo">
-            <h2>Recomendações de segurança</h2>
-            <p ><b>Saiba o que fazer em caso de chuva e alagamentos</b></p>
-            <p>Em situações de chuvas intensas e risco de alagamento, é fundamental que moradores de zonas suscetíveis a cheias adotem medidas preventivas
-                para evitar situações de risco à vida e dados ao patrimônio.</p>
-            <p><b>Confira algumas dicas importantes:</b></p>    
-            <ul id="texto1">
-                <li>Se puder, permaneça em casa;</li>
-                <li>Esteja atento aos boletins meteorológicos e alertas de emergência emitidos pelo Estado;</li>
-                <li>Siga as instruções das autoridades locais e utilize as rotas de evacuação recomendadas;</li>
-                <li>Evite o deslocamento para regições afetadas;</li>
-                <li>Se morar em área de risco, abandone o local com antecedência;</li>
-                <li>Separe os documentos importantes e embale-os em sacos plásticos;</li>
-                <li>Ao sair desligue a chave geral de eletricidade, água ou gás;</li>
-                <li>Evite atravessar as águas de carro ou a pé;</li>
-                <li>Se ficar isolado em local inseguro, chame imediatamente o Corpo de Bombeiros (193);</li>
-                <li>Encha recipientes com água potável para uso em caso de interrupção no fornecimento.</li>
-            </ul>
-            <p><b>O que fazer se estiver dirigindo durante uma inundação?</b></p> 
-            <ul>
-                <li>Não enfrente cursos de agua com correnteza, pois você e seu veículo podem ser arrastados;</li>
-                <li>Caso seja surpreendido por uma inundação, fique atento ao nível de água observando os demais veículos:</li>
-                <li>Se o nível da água tiver ultrapassado o meio da roda, desligue o veículo, desça e, a pé, procure um lugar seguro para permanecer;</li>
-                <li>Se o nível da água tiver ultrapassado o nível da porta, desça pela janela do carro, suba ao teto do veículo e pegue um cinto de segurança para se segurar até a chegada do resgate;</li>
-                <li>Somente siga dirigindo, com a atenção redobrada, se o nível da água estiver abaixo do nível da roda.</li>
-            </ul>
-            <a href="https://www.instagram.com/reel/C0b3t1lOV9I/?igsh=MXJhMWlzcW1rdHMyeA%3D%3D">
-            <button>Video com orientações da Defesa Civil</button>
-            </a>
-        </section>
-    </div>
+            <section class="carrossel-item prevencao-tipos">
+                <h1>Dicas de Prevenção</h1>
+                    <img src="../../assets/img/prev.jpg" alt="prev" id="imagem-prevencao" class="conteudo">
+                <h3>Quais medidas poderiam ter sido tomadas para evitar tragédia no RS?</h3>
+                <a href="https://www.otempo.com.br/brasil/2024/5/7/quais-medidas-poderiam-ser-tomadas-para-evitar-tragedia-no-rs-">
+                    <button>Ler mais</button>
+                </a>    
+            </section>
+            <section class="carrossel-item recomendacoes-seguranca" class="conteudo">
+                <h2>Recomendações de segurança</h2>
+                <p ><b>Saiba o que fazer em caso de chuva e alagamentos</b></p>
+                <p>Em situações de chuvas intensas e risco de alagamento, é fundamental que moradores de zonas suscetíveis a cheias adotem medidas preventivas
+                    para evitar situações de risco à vida e dados ao patrimônio.</p>
+                <p><b>Confira algumas dicas importantes:</b></p>    
+                <ul id="texto1">
+                    <li>Se puder, permaneça em casa;</li>
+                    <li>Esteja atento aos boletins meteorológicos e alertas de emergência emitidos pelo Estado;</li>
+                    <li>Siga as instruções das autoridades locais e utilize as rotas de evacuação recomendadas;</li>
+                    <li>Evite o deslocamento para regições afetadas;</li>
+                    <li>Se morar em área de risco, abandone o local com antecedência;</li>
+                    <li>Separe os documentos importantes e embale-os em sacos plásticos;</li>
+                    <li>Ao sair desligue a chave geral de eletricidade, água ou gás;</li>
+                    <li>Evite atravessar as águas de carro ou a pé;</li>
+                    <li>Se ficar isolado em local inseguro, chame imediatamente o Corpo de Bombeiros (193);</li>
+                    <li>Encha recipientes com água potável para uso em caso de interrupção no fornecimento.</li>
+                </ul>
+                <p><b>O que fazer se estiver dirigindo durante uma inundação?</b></p> 
+                <ul>
+                    <li>Não enfrente cursos de agua com correnteza, pois você e seu veículo podem ser arrastados;</li>
+                    <li>Caso seja surpreendido por uma inundação, fique atento ao nível de água observando os demais veículos:</li>
+                    <li>Se o nível da água tiver ultrapassado o meio da roda, desligue o veículo, desça e, a pé, procure um lugar seguro para permanecer;</li>
+                    <li>Se o nível da água tiver ultrapassado o nível da porta, desça pela janela do carro, suba ao teto do veículo e pegue um cinto de segurança para se segurar até a chegada do resgate;</li>
+                    <li>Somente siga dirigindo, com a atenção redobrada, se o nível da água estiver abaixo do nível da roda.</li>
+                </ul>
+                <a href="https://www.instagram.com/reel/C0b3t1lOV9I/?igsh=MXJhMWlzcW1rdHMyeA%3D%3D">
+                <button>Video com orientações da Defesa Civil</button>
+                </a>
+            </section>
+        </div>
     <button class="carrossel-control-prev" onclick="prevSlide()">&#10094;</button>
     <button class="carrossel-control-next" onclick="nextSlide()">&#10095;</button>
     </main>
@@ -83,29 +84,29 @@
             <section id="footerfeio">
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="../../assets/img/redeSocial.png" alt="Redes Sociais">
+                        <img src="/assets/img/redeSocial.png" alt="Redes Sociais" id="social-icon">
                         <h3>Redes Sociais</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="./sobre.html">
-                        <img src="../../assets/img/sobreNos.png" alt="Sobre Nós">
+                        <img src="/assets/img/sobreNos.png" alt="Sobre Nós" id="about-icon">
                         <h3>Sobre Nós</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="../../assets/img/contato.png" alt="Contato">
+                        <img src="/assets/img/contato.png" alt="Contato" id="contact-icon">
                         <h3>Contato</h3>
                     </a>
                 </div>
             </section>
             <div class="middle-section">
-                <img src="../../assets/img/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <img src="/assets/img/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
                 <p>Copyright ©2024 Portal Do Clima RS</p>
             </div>
             <div class="qrcode-section">
-                <img src="../../assets/img/qrCode.png" alt="QR Code" id="qrcode">
+                <img src="/assets/img/qrCode.png" alt="QR Code" id="qrcode">
             </div>
         </div>
         <div class="diagonal-line left"></div>
